[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
time = "0.3.9"
time-tz = "0.5.2"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid-widget-nursery = { path = "../../druid-widget-nursery" }
crossbeam-channel = "0.5.4"
