[package]
name = "profiler"
version = "1.0.0-alpha-3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
time = { version = "0.3.7", features = ["formatting", "macros"] }
time-tz = { version = "0.5.2", features = ["system"] }
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid-widget-nursery = { path = "./druid-widget-nursery" }
crossbeam-channel = "0.5.4"
bp3d-fs = "1.1.0"
bpx = { version = "4.0.0-beta-7.2.2", features = ["sd", "serde"] }
byteorder = "1.4.3"
async-trait = "0.1.53"
tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
semver = "1.0.7"
