[package]
name = "profiler"
version = "1.0.0-alpha-3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
chrono = "0.4.23"
crossbeam-channel = "0.5.4"
bp3d-fs = "1.1.0"
byteorder = "1.4.3"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.25"

[build-dependencies]
semver = "1.0.7"
